Added test hightligts

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,4 @@
+@import url("https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js");
 @import "abstracts/mixins";
 @import "abstracts/variables";
 @import "base/base";
