Added coding chellange1

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,5 @@
-@import url("https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js");
 @import "abstracts/mixins";
 @import "abstracts/variables";
 @import "base/base";
 @import "pages/index";
+@import "pages/chellange1";
