--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -49,4 +49,20 @@ body {
       }
     }
   }
+
+  pre {
+    background-color: rgba(white, 0.5);
+    margin: 2rem auto;
+  }
+}
+
+.section {
+  &__second-title {
+    font-size: 3rem;
+    font-family: monospace;
+    letter-spacing: 0.15em;
+    font-weight: 700;
+    color: $color-green;
+    margin: 2rem auto;
+  }
 }
