--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,8 @@ html {
   font-size: 62.5%; }
 
 body {
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  font-size: 2rem; }
 
 body {
   background-image: linear-gradient(to bottom, #78c2fe, #379af2, #0071e1, #0046c9, #0108a9); }
@@ -52,3 +53,14 @@ body {
         background-color: transparent;
         color: rgba(249, 248, 113, 0.8);
         transform: translateY(5px); }
+  body pre {
+    background-color: rgba(255, 255, 255, 0.5);
+    margin: 2rem auto; }
+
+.section__second-title {
+  font-size: 3rem;
+  font-family: monospace;
+  letter-spacing: 0.15em;
+  font-weight: 700;
+  color: #00b17c;
+  margin: 2rem auto; }
