--- a/css/style.css
+++ b/css/style.css
@@ -6,38 +6,71 @@
   box-sizing: inherit; }
 
 html {
-  width: 100%;
-  height: 100%;
   font-size: 62.5%; }
 
 body {
   box-sizing: border-box;
   font-size: 2rem; }
 
+body {
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  line-height: 1.7;
+  padding: 3rem; }
+
+.heading-primary {
+  text-transform: uppercase;
+  backface-visibility: hidden;
+  margin-bottom: 6rem; }
+  .heading-primary--main {
+    display: block;
+    font-size: 6rem;
+    font-weight: 400;
+    letter-spacing: 3.5rem; }
+  .heading-primary--sub {
+    display: block;
+    font-size: 2rem;
+    font-weight: 700;
+    letter-spacing: 1.75rem; }
+
+.heading-secondary {
+  font-size: 3.5rem;
+  text-transform: uppercase;
+  font-weight: 700;
+  display: inline-block;
+  letter-spacing: 0.2rem;
+  transition: all 0.2s; }
+
+.heading-tertiary {
+  font-size: 1.6rem;
+  font-weight: 700;
+  text-transform: uppercase; }
+
+.paragraph {
+  font-size: 1.6rem; }
+  .paragraph:not(:last-child) {
+    margin-bottom: 3rem; }
+
 .section__second-title {
   font-size: 3rem;
   font-family: monospace;
   letter-spacing: 0.15em;
   font-weight: 700;
-  color: #00b17c;
   margin: 2rem auto; }
 
 body {
   background-image: linear-gradient(to bottom, #78c2fe, #379af2, #0071e1, #0046c9, #0108a9); }
   body .main {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%); }
+    width: 80%;
+    margin: 0 auto;
+    padding: 2rem;
+    min-height: 100vh; }
     body .main__title {
       font-size: 4rem;
       font-family: monospace;
       text-align: center;
       letter-spacing: 0.15em;
       font-weight: 700;
-      color: transparent;
-      background-image: linear-gradient(to right, #f9f871, #00b17c);
-      -webkit-background-clip: text;
       margin: 4rem auto; }
     body .main__list {
       list-style: none;
