--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,6 +2,7 @@
 @import "abstracts/variables";
 
 @import "base/base";
+@import "base/typography";
 
 @import "pages/chellange1";
 @import "pages/index";
