--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body {
   font-size: 2rem; }
 
 body {
-  font-family: "Lato", sans-serif;
+  font-family: "Courier New", Courier, monospace;
   font-weight: 400;
   line-height: 1.7;
   padding: 3rem; }
@@ -24,9 +24,14 @@ body {
   margin-bottom: 6rem; }
   .heading-primary--main {
     display: block;
-    font-size: 6rem;
+    font-size: 4rem;
     font-weight: 400;
-    letter-spacing: 3.5rem; }
+    letter-spacing: 1.5rem;
+    text-align: center; }
+    @media screen and (max-width: 800px) {
+      .heading-primary--main {
+        letter-spacing: 0rem;
+        font-size: 3rem; } }
   .heading-primary--sub {
     display: block;
     font-size: 2rem;
@@ -51,13 +56,6 @@ body {
   .paragraph:not(:last-child) {
     margin-bottom: 3rem; }
 
-.section__second-title {
-  font-size: 3rem;
-  font-family: monospace;
-  letter-spacing: 0.15em;
-  font-weight: 700;
-  margin: 2rem auto; }
-
 body {
   background-image: linear-gradient(to bottom, #78c2fe, #379af2, #0071e1, #0046c9, #0108a9); }
   body .main {
@@ -65,13 +63,6 @@ body {
     margin: 0 auto;
     padding: 2rem;
     min-height: 100vh; }
-    body .main__title {
-      font-size: 4rem;
-      font-family: monospace;
-      text-align: center;
-      letter-spacing: 0.15em;
-      font-weight: 700;
-      margin: 4rem auto; }
     body .main__list {
       list-style: none;
       display: flex;
