--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,5 +1,5 @@
 body {
-  font-family: "Lato", sans-serif;
+  font-family: "Courier New", Courier, monospace;
   font-weight: 400;
   line-height: 1.7;
   padding: 3rem;
@@ -12,9 +12,15 @@ body {
 
   &--main {
     display: block;
-    font-size: 6rem;
+    font-size: 4rem;
     font-weight: 400;
-    letter-spacing: 3.5rem;
+    letter-spacing: 1.5rem;
+    text-align: center;
+
+    @media screen and (max-width: 800px) {
+      letter-spacing: 0rem;
+      font-size: 3rem;
+    }
   }
 
   &--sub {
