--- a/css/style.css
+++ b/css/style.css
@@ -35,8 +35,7 @@ body {
   .heading-primary--sub {
     display: block;
     font-size: 2rem;
-    font-weight: 700;
-    letter-spacing: 1.75rem; }
+    font-weight: 700; }
 
 .heading-secondary {
   font-size: 3.5rem;
@@ -63,6 +62,10 @@ body {
     margin: 0 auto;
     padding: 2rem;
     min-height: 100vh; }
+    @media screen and (max-width: 800px) {
+      body .main {
+        width: 100%;
+        padding: 0; } }
     body .main__list {
       list-style: none;
       display: flex;
@@ -80,11 +83,16 @@ body {
       font-size: 2.5rem;
       background-color: rgba(249, 248, 113, 0.8);
       font-weight: 700;
-      transition: all 0.3s linear; }
+      transition: all 0.3s linear;
+      min-width: 400px; }
+      @media screen and (max-width: 800px) {
+        body .main__link:link, body .main__link:visited {
+          min-width: 100px; } }
       body .main__link:link:hover, body .main__link:visited:hover {
         background-color: transparent;
         color: rgba(249, 248, 113, 0.8);
         transform: translateY(5px); }
   body pre {
     background-color: rgba(255, 255, 255, 0.5);
-    margin: 2rem auto; }
+    margin: 2rem auto;
+    overflow: auto; }
