--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -16,6 +16,7 @@ body {
     font-weight: 400;
     letter-spacing: 1.5rem;
     text-align: center;
+    margin: 0 auto;
 
     @media screen and (max-width: 800px) {
       letter-spacing: 0rem;
