--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,6 +3,7 @@
 
 @import "base/base";
 @import "base/typography";
+@import "base/animations";
 
 @import "pages/chellange1";
 @import "pages/index";
