--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -23,6 +23,10 @@ body {
       display: flex;
       text-align: center;
       margin: 1rem auto;
+
+      &:last-child {
+        margin-bottom: 6rem;
+      }
     }
 
     &__link {
@@ -55,5 +59,11 @@ body {
     background-color: rgba(white, 0.5);
     margin: 2rem auto;
     overflow: auto;
+  }
+}
+
+.qoute_containter {
+  &:not(:first-child()) {
+    text-align: center;
   }
 }
