--- a/css/style.css
+++ b/css/style.css
@@ -100,5 +100,13 @@ body {
     margin: 2rem auto;
     overflow: auto; }
 
-.qoute_containter:not(:first-child()) {
-  text-align: center; }
+.qoute_containter {
+  background-color: #082234;
+  padding: 2rem; }
+  .qoute_containter h2 {
+    color: #fc0404; }
+  .qoute_containter p {
+    color: #04fc04;
+    text-align: center;
+    font-family: monospace;
+    text-shadow: 1px 1px 1px #333, 3px 3px 5px #04fc04; }
