--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -63,7 +63,17 @@ body {
 }
 
 .qoute_containter {
-  &:not(:first-child()) {
+  background-color: #082234;
+  padding: 2rem;
+
+  h2 {
+    color: #fc0404;
+  }
+
+  p {
+    color: #04fc04;
     text-align: center;
+    font-family: monospace;
+    text-shadow: 1px 1px 1px #333, 3px 3px 5px #04fc04;
   }
 }
