--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -63,11 +63,11 @@ body {
 }
 
 .qoute_containter {
-  background-color: #082234;
+  background-color: rgba(#333, 0.2);
   padding: 2rem;
 
   h2 {
-    color: #fc0404;
+    color: #9c0404;
   }
 
   p {
