--- a/css/style.css
+++ b/css/style.css
@@ -104,7 +104,7 @@ body {
   background-color: rgba(51, 51, 51, 0.2);
   padding: 2rem; }
   .qoute_containter h2 {
-    color: #9c0404; }
+    color: #fce90d; }
   .qoute_containter p {
     color: #04fc04;
     text-align: center;
