Changed green & yellow colors in vars

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -2,9 +2,9 @@
 $color-primary: #046bfc;
 $color-primary-light: #78c2fe;
 
-$color-secondary: #f9f871;
+$color-secondary: #fce90d;
 
-$color-green: #00b17c;
+$color-green: #04fc04;
 
 $color-white: #fff;
 $color-black: #000;
