--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,8 @@ body {
   .heading-primary--sub {
     display: block;
     font-size: 2rem;
-    font-weight: 700; }
+    font-weight: 700;
+    color: #fce90d; }
 
 .heading-secondary {
   font-size: 3.5rem;
@@ -84,7 +85,7 @@ body {
       color: #046bfc;
       padding: 1rem;
       font-size: 2.5rem;
-      background-color: rgba(249, 248, 113, 0.8);
+      background-color: rgba(252, 233, 13, 0.8);
       font-weight: 700;
       transition: all 0.3s linear;
       min-width: 400px; }
@@ -93,7 +94,7 @@ body {
           min-width: 100px; } }
       body .main__link:link:hover, body .main__link:visited:hover {
         background-color: transparent;
-        color: rgba(249, 248, 113, 0.8);
+        color: rgba(252, 233, 13, 0.8);
         transform: translateY(5px); }
   body pre {
     background-color: rgba(255, 255, 255, 0.5);
