--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -67,13 +67,13 @@ body {
   padding: 2rem;
 
   h2 {
-    color: #fce90d;
+    color: $color-secondary;
   }
 
   p {
-    color: #04fc04;
+    color: $color-green;
     text-align: center;
     font-family: monospace;
-    text-shadow: 1px 1px 1px #333, 3px 3px 5px #04fc04;
+    text-shadow: 1px 1px 1px #333, 3px 3px 5px $color-green;
   }
 }
