--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -13,10 +13,10 @@ body {
   &--main {
     display: block;
     font-size: 4rem;
-    font-weight: 400;
     letter-spacing: 1.5rem;
-    text-align: center;
     margin: 0 auto;
+    font-family: cursive;
+    font-weight: 900;
 
     @media screen and (max-width: 800px) {
       letter-spacing: 0rem;
@@ -48,9 +48,5 @@ body {
 }
 
 .paragraph {
-  font-size: $default-font-size;
-
-  &:not(:last-child) {
-    margin-bottom: 3rem;
-  }
+  font-size: 1.8rem;
 }
