--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,5 +6,7 @@
 @import "base/animations";
 @import "base/utilities";
 
+@import "containers/footer";
+
 @import "pages/chellange1";
 @import "pages/index";
