--- a/css/style.css
+++ b/css/style.css
@@ -143,6 +143,9 @@ body {
     background-color: rgba(255, 255, 255, 0.5);
     margin: 2rem auto;
     overflow: auto; }
+    @media screen and (max-width: 600px) {
+      body pre {
+        font-size: 10px; } }
 
 .qoute_containter {
   background-color: rgba(51, 51, 51, 0.2);
