--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -60,6 +60,10 @@ body {
     background-color: rgba(white, 0.5);
     margin: 2rem auto;
     overflow: auto;
+
+    @media screen and (max-width: 600px) {
+      font-size: 10px;
+    }
   }
 }
 
