--- a/css/style.css
+++ b/css/style.css
@@ -120,16 +120,26 @@ body {
       margin: 1rem auto;
       box-shadow: -1px 1px 13px 5px rgba(0, 0, 0, 0.76);
       transition: all 0.3s linear; }
+      body .main__item:nth-child(1) a {
+        background-color: #db3d86; }
+      body .main__item:nth-child(2) a {
+        background-color: #c8a8e0; }
+      body .main__item:nth-child(3) a {
+        background-color: #ba21d7; }
+      body .main__item:nth-child(4) a {
+        background-color: #94c140; }
+      body .main__item:nth-child(5) a {
+        background-color: #c7f359; }
       body .main__item:hover {
         transform: translateY(5px); }
     body .main__link:link, body .main__link:visited {
       text-decoration: none;
       text-transform: uppercase;
-      color: #046bfc;
+      color: #000;
       padding: 1rem;
       font-size: 2.5rem;
       background-color: rgba(252, 233, 13, 0.8);
-      font-weight: 700;
+      font-weight: 400;
       transition: all 0.3s ease-in-out;
       min-width: 400px; }
       @media screen and (max-width: 800px) {
@@ -138,7 +148,8 @@ body {
       body .main__link:link:hover, body .main__link:visited:hover {
         background-color: transparent;
         color: rgba(252, 233, 13, 0.8);
-        letter-spacing: 0.4rem; }
+        letter-spacing: 0.4rem;
+        font-weight: 900; }
   body pre {
     background-color: rgba(255, 255, 255, 0.5);
     margin: 2rem auto;
