--- a/css/style.css
+++ b/css/style.css
@@ -24,22 +24,24 @@ body {
   margin-bottom: 6rem; }
   .heading-primary--main {
     display: block;
+    font-family: cursive;
     font-size: 4rem;
     letter-spacing: 1.5rem;
     margin: 0 auto;
-    font-family: cursive;
     font-weight: 900; }
     @media screen and (max-width: 800px) {
       .heading-primary--main {
         letter-spacing: 0rem;
         font-size: 3rem; } }
   .heading-primary--sub {
+    font-family: cursive;
     display: block;
     font-size: 2rem;
     font-weight: 700;
     color: #fce90d; }
 
 .heading-secondary {
+  font-family: cursive;
   font-size: 3.5rem;
   text-transform: uppercase;
   font-weight: 700;
@@ -48,6 +50,7 @@ body {
   transition: all 0.2s; }
 
 .heading-tertiary {
+  font-family: cursive;
   font-size: 1.6rem;
   font-weight: 700;
   text-transform: uppercase; }
@@ -121,15 +124,15 @@ body {
       box-shadow: -1px 1px 13px 5px rgba(0, 0, 0, 0.76);
       transition: all 0.3s linear; }
       body .main__item:nth-child(1) a {
-        background-color: #db3d86; }
+        background-color: #faf156; }
       body .main__item:nth-child(2) a {
-        background-color: #c8a8e0; }
+        background-color: #2c999c; }
       body .main__item:nth-child(3) a {
-        background-color: #ba21d7; }
+        background-color: #4f42e6; }
       body .main__item:nth-child(4) a {
-        background-color: #94c140; }
+        background-color: #cc49e4; }
       body .main__item:nth-child(5) a {
-        background-color: #c7f359; }
+        background-color: #b5be54; }
       body .main__item:hover {
         transform: translateY(5px); }
     body .main__link:link, body .main__link:visited {
