Added max-height and overflow to btns - list

--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -16,7 +16,9 @@ body {
       list-style: none;
       display: flex;
       justify-content: center;
-      flex-direction: column;
+      flex-wrap: wrap;
+      max-height: 100vh;
+      overflow-y: auto;
     }
 
     &__item {
