--- a/css/style.css
+++ b/css/style.css
@@ -117,22 +117,24 @@ body {
       list-style: none;
       display: flex;
       justify-content: center;
-      flex-direction: column; }
+      flex-wrap: wrap;
+      max-height: 100vh;
+      overflow-y: auto; }
     body .main__item {
       display: flex;
       margin: 1rem auto;
       box-shadow: -1px 1px 13px 5px rgba(0, 0, 0, 0.76);
       transition: all 0.3s linear; }
       body .main__item:nth-child(1) a {
-        background-color: #faf156; }
+        background-color: #3455f0; }
       body .main__item:nth-child(2) a {
-        background-color: #2c999c; }
+        background-color: #9654e6; }
       body .main__item:nth-child(3) a {
-        background-color: #4f42e6; }
+        background-color: #2fe056; }
       body .main__item:nth-child(4) a {
-        background-color: #cc49e4; }
+        background-color: #5dc367; }
       body .main__item:nth-child(5) a {
-        background-color: #b5be54; }
+        background-color: #544b50; }
       body .main__item:hover {
         transform: translateY(5px); }
     body .main__link:link, body .main__link:visited {
