--- a/css/style.css
+++ b/css/style.css
@@ -166,25 +166,25 @@ body {
       box-shadow: -1px 1px 13px 5px rgba(0, 0, 0, 0.56);
       transition: all 0.3s linear; }
       body .main__item:nth-child(1) {
-        animation: moveInRight 0.2s 1; }
+        animation: moveInRight 0.6s 1; }
         body .main__item:nth-child(1) a {
-          background-color: #7a6862; }
+          background-color: #6256b0; }
       body .main__item:nth-child(2) {
-        animation: moveInRight 0.7s 1; }
+        animation: moveInRight 0.1s 1; }
         body .main__item:nth-child(2) a {
-          background-color: #6b2b7d; }
+          background-color: #3228c5; }
       body .main__item:nth-child(3) {
         animation: moveInRight 0.7s 1; }
         body .main__item:nth-child(3) a {
-          background-color: #729870; }
+          background-color: #29bcdd; }
       body .main__item:nth-child(4) {
         animation: moveInRight 0.6s 1; }
         body .main__item:nth-child(4) a {
-          background-color: #3d9135; }
+          background-color: #28c7b9; }
       body .main__item:nth-child(5) {
-        animation: moveInRight 0.4s 1; }
+        animation: moveInRight 1s 1; }
         body .main__item:nth-child(5) a {
-          background-color: #40f4a6; }
+          background-color: #998f6e; }
       body .main__item:hover {
         box-shadow: -1px 1px 13px 5px rgba(0, 0, 0, 0.76);
         transform: translateY(5px) scale(1.1);
