--- a/sass/pages/_chellange6.scss
+++ b/sass/pages/_chellange6.scss
@@ -10,6 +10,16 @@
 
   .active {
     background-color: rgba($color-primary-light, .6);
+
+    .player-name {
+      &::after {
+        content: "\2022";
+        font-size: 47px;
+        position: absolute;
+        color: #eb4d4d;
+        top: -7px;
+      }
+    }
   }
 
   button {
@@ -46,16 +56,8 @@
     margin-bottom: 130px;
   }
 
-  .active .player-name::after {
-    content: "\2022";
-    font-size: 47px;
-    position: absolute;
-    color: #eb4d4d;
-    top: -7px;
-  }
-
   .btn-new {
-    top: 45px;
+    top: 85px;
   }
 
   .btn-roll {
@@ -69,7 +71,7 @@
   .dice {
     position: absolute;
     left: 50%;
-    top: 178px;
+    top: 208px;
     transform: translateX(-50%);
     height: 100px;
     box-shadow: 0px 10px 60px rgba(0, 0, 0, 0.1);
