--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ body {
 
 .heading-tertiary {
   font-family: cursive;
-  font-size: 1.6rem;
+  font-size: 2rem;
   font-weight: 700;
   text-transform: uppercase; }
 
@@ -166,25 +166,25 @@ body {
       box-shadow: -1px 1px 13px 5px rgba(0, 0, 0, 0.56);
       transition: all 0.3s linear; }
       body .main__item:nth-child(1) {
-        animation: moveInRight 0.5s 1; }
-        body .main__item:nth-child(1) a {
-          background-color: #cef430; }
-      body .main__item:nth-child(2) {
         animation: moveInRight 1s 1; }
+        body .main__item:nth-child(1) a {
+          background-color: #35f8e8; }
+      body .main__item:nth-child(2) {
+        animation: moveInRight 0.3s 1; }
         body .main__item:nth-child(2) a {
-          background-color: #8425ae; }
+          background-color: #11aede; }
       body .main__item:nth-child(3) {
-        animation: moveInRight 0.8s 1; }
+        animation: moveInRight 0.1s 1; }
         body .main__item:nth-child(3) a {
-          background-color: #e9c795; }
+          background-color: #67ab78; }
       body .main__item:nth-child(4) {
-        animation: moveInRight 0.6s 1; }
-        body .main__item:nth-child(4) a {
-          background-color: #248e1f; }
-      body .main__item:nth-child(5) {
         animation: moveInRight 0.5s 1; }
+        body .main__item:nth-child(4) a {
+          background-color: #9172e1; }
+      body .main__item:nth-child(5) {
+        animation: moveInRight 0.7s 1; }
         body .main__item:nth-child(5) a {
-          background-color: #41c378; }
+          background-color: #024343; }
       body .main__item:hover {
         box-shadow: -1px 1px 13px 5px rgba(0, 0, 0, 0.76);
         transform: translateY(5px) scale(1.1);
@@ -229,12 +229,19 @@ body {
 
 .challenge-6 {
   display: flex;
-  position: relative; }
+  position: relative;
+  -webkit-box-shadow: 0 4px 10px #046bfc;
+  -moz-box-shadow: 0 4px 10px #046bfc;
+  box-shadow: 0 4px 10px #046bfc; }
+  .challenge-6 > * {
+    text-transform: uppercase; }
+  .challenge-6 .icon {
+    margin-right: 5px;
+    width: 15px; }
   .challenge-6 .player-0-panel,
   .challenge-6 .player-1-panel {
     flex: 50%;
-    background-color: rgba(120, 194, 254, 0.2);
-    text-transform: uppercase; }
+    background-color: rgba(120, 194, 254, 0.2); }
     .challenge-6 .player-0-panel .player-name,
     .challenge-6 .player-1-panel .player-name {
       font-size: 40px;
@@ -249,42 +256,59 @@ body {
       text-align: center;
       font-size: 80px;
       font-weight: 100;
-      color: #eb4d4d;
+      color: #78c2fe;
+      text-shadow: 0 0 5px #333, 0 0 10px #333, 0 0 15px #333, 0 0 20px #78c2fe, 0 0 30px #78c2fe, 0 0 40px #78c2fe, 0 0 55px #78c2fe, 0 0 75px #78c2fe;
       margin-bottom: 130px; }
     .challenge-6 .player-0-panel .player-current-box,
     .challenge-6 .player-1-panel .player-current-box {
-      background-color: #eb4d4d;
-      color: #fff;
+      background-color: #FCD4E4;
+      color: #000;
       width: 40%;
       margin: 0 auto;
       padding: 12px;
-      text-align: center; }
+      font-size: 2rem;
+      text-align: center;
+      -webkit-box-shadow: inset 0 1px 20px #78c2fe;
+      -moz-box-shadow: inset 0 1px 20px #78c2fe;
+      box-shadow: inset 0 1px 20px #78c2fe; }
     .challenge-6 .player-0-panel .player-current-label,
     .challenge-6 .player-1-panel .player-current-label {
       margin-bottom: 10px;
-      font-size: 12px;
+      font-size: 20px;
       color: #222; }
+      @media screen and (max-width: 800px) {
+        .challenge-6 .player-0-panel .player-current-label,
+        .challenge-6 .player-1-panel .player-current-label {
+          font-size: 15px; } }
   .challenge-6 .active {
     background-color: rgba(120, 194, 254, 0.6); }
-    .challenge-6 .active .player-name::after {
-      content: "\2022";
-      font-size: 47px;
-      position: absolute;
-      color: #eb4d4d;
-      top: -7px; }
+    .challenge-6 .active .player-name {
+      font-weight: 700; }
+      .challenge-6 .active .player-name::after {
+        content: "\2022";
+        font-size: 47px;
+        position: absolute;
+        color: #ff1500;
+        top: -7px; }
   .challenge-6 button {
     position: absolute;
     width: 200px;
     left: 50%;
     transform: translateX(-50%);
-    color: #04fc04;
+    color: #000;
     background: none;
     border: none;
     font-size: 20px;
-    text-transform: uppercase;
     cursor: pointer;
     font-weight: 300;
-    transition: background-color 0.3s, color 0.3s; }
+    transition: all 0.3s; }
+    .challenge-6 button:hover, .challenge-6 button:active {
+      transform: translate(-50%, 2px); }
+    .challenge-6 button:focus {
+      outline: none; }
+    @media screen and (max-width: 800px) {
+      .challenge-6 button {
+        font-size: 15px; } }
   .challenge-6 .btn-new {
     top: 85px; }
   .challenge-6 .btn-roll {
@@ -297,4 +321,4 @@ body {
     top: 208px;
     transform: translateX(-50%);
     height: 100px;
-    box-shadow: 0px 10px 60px rgba(0, 0, 0, 0.1); }
+    box-shadow: -1px 1px 13px 5px rgba(0, 0, 0, 0.36); }
