--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -8,6 +8,7 @@ $color-green: #04fc04;
 
 $color-white: #fff;
 $color-black: #000;
+$color-danger: #ff1500;
 
 // FONT
-$default-font-size: 1.6rem;
+$default-font-size: 2rem;
