--- a/css/style.css
+++ b/css/style.css
@@ -166,25 +166,25 @@ body {
       box-shadow: -1px 1px 13px 5px rgba(0, 0, 0, 0.56);
       transition: all 0.3s linear; }
       body .main__item:nth-child(1) {
-        animation: moveInRight 1s 1; }
+        animation: moveInRight 0.4s 1; }
         body .main__item:nth-child(1) a {
-          background-color: #35f8e8; }
+          background-color: #16b04a; }
       body .main__item:nth-child(2) {
-        animation: moveInRight 0.3s 1; }
+        animation: moveInRight 0.8s 1; }
         body .main__item:nth-child(2) a {
-          background-color: #11aede; }
+          background-color: #f3b2e1; }
       body .main__item:nth-child(3) {
-        animation: moveInRight 0.1s 1; }
+        animation: moveInRight 0.7s 1; }
         body .main__item:nth-child(3) a {
-          background-color: #67ab78; }
+          background-color: #c9c96c; }
       body .main__item:nth-child(4) {
-        animation: moveInRight 0.5s 1; }
+        animation: moveInRight 0.2s 1; }
         body .main__item:nth-child(4) a {
-          background-color: #9172e1; }
+          background-color: #a0b819; }
       body .main__item:nth-child(5) {
         animation: moveInRight 0.7s 1; }
         body .main__item:nth-child(5) a {
-          background-color: #024343; }
+          background-color: #d417df; }
       body .main__item:hover {
         box-shadow: -1px 1px 13px 5px rgba(0, 0, 0, 0.76);
         transform: translateY(5px) scale(1.1);
@@ -279,7 +279,7 @@ body {
       @media screen and (max-width: 800px) {
         .challenge-6 .player-0-panel .player-current-label,
         .challenge-6 .player-1-panel .player-current-label {
-          font-size: 15px; } }
+          font-size: 10px; } }
   .challenge-6 .active {
     background-color: rgba(120, 194, 254, 0.6); }
     .challenge-6 .active .player-name {
@@ -308,7 +308,7 @@ body {
       outline: none; }
     @media screen and (max-width: 800px) {
       .challenge-6 button {
-        font-size: 15px; } }
+        font-size: 12px; } }
   .challenge-6 .btn-new {
     top: 85px; }
   .challenge-6 .btn-roll {
